Michael Chambers - Database Setup Buttons setup Links to seperate activities setup Attempted to run code Appears to be an issue with the database Appears data is not being transfered to the Database correctly which causes the APP to crash Due to having nothing in the database the ALL Contacts button does not work either
Believe problem is on AddActivity.Java
App does not post Toast Message so believe issues is in Public Void saveData (Line33-44)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,20 @@
     tools:context="uk.ac.northumbria.securephonebook.MainActivity">
 
     #Create A Contact List Button
+
     <Button
+        android:id="@+id/btnviewallcontacts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View All Contacts"
-        android:id="@+id/btnviewallcontacts"
+        android:layout_alignEnd="@+id/btnregisternewcontact"
 
-        android:layout_below="@+id/toolbar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="26dp"
         android:layout_alignRight="@+id/btnregisternewcontact"
-        android:layout_alignEnd="@+id/btnregisternewcontact">
-    </Button>
+        android:layout_below="@+id/toolbar"
+        android:layout_marginTop="28dp"
+        android:onClick="LoadContactsActivity"
+        android:text="View All Contacts"></Button>
 
     #Create A New Contact Button
     <Button
@@ -28,7 +29,7 @@
         android:text="Register New Contact"
         android:id="@+id/btnregisternewcontact"
         android:onClick="LoadAddActivity"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="28dp"
         android:layout_below="@+id/btnviewallcontacts"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
